overlays/development-monitoring/ops/bbb-endpoints.yaml
# defines the IPs of BBB that should be scraped by Prometheus
kind: Endpoints
apiVersion: v1
metadata:
  name: bbb
  namespace: monitoring
  labels:
    k8s-app: bbb-metrics
subsets:
  - addresses:
      - ip: 81.173.113.21
      - ip: 85.215.237.214
      - ip: 85.215.237.213
      - ip: 185.132.45.5
      - ip: 217.160.200.92
      - ip: 217.160.200.91
      - ip: 185.48.117.209
      - ip: 213.244.192.234
      - ip: 185.48.117.43
      - ip: 217.160.200.12
      - ip: 185.48.116.231
      - ip: 185.48.119.186
      - ip: 185.48.116.252
    ports:
      - name: ne-metrics
        port: 9100
      - name: bbb-metrics
        port: 9688
